*** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***

* SNAPSHOT October 10, 2016
  * Upstream 2016-04-13
  * [VM] Add pseudo sounds (i.e. FDD seek), need sound files (even not WAV file at Qt porting), see doc/VMs/foo.txt . 
  * [VM][DATAREC][FDCs] Update STATE_VERSION of some devices.
  * [VM/FM7] VRAM: Make gcc using SIMD (when optimize options have set) to be faster rendering.
  * [VM/X1,FM7] load_state(): Keep backward compatibility to SNAPSHOT 20160923.
  * [VM/EVENT] Extend permitted sound events to 32 to use sound files (reserved feature).
  * [VM/EVENT] Update MAX_SOUND from 8 to 16.
  * [Qt/GUI] Win32: Fix crash launching with gdb/Mingw32 or gdb/Cygwin. See http://hanabi.2ch.net/test/read.cgi/i4004/1430836648/750 .
  * [Build/Linux] Fix wrong flags with LTO.
  * [Build] Non-Win32 : Ready to build with llvm clang (later than 3.7?).
  * [Build/GENERAL] Separate compiler depended params to source/build-cmake/param/ .
  * Build with commit d100ae8323d6657fe37ac44a69abc8da470b77ad (or later).

-- Oct 10, 2016 05:22:18 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT September 23, 2016
  * Upstream 2016-04-13
  * [DOC] Translated some documents written in Japanese only to English using Google-Translate, still not enaugh to be corrected.
  * [Qt/WIN32] Fix crash on startup (maybe true) caused by (´∀｀)＜ぬるぽ　ヽ(・∀・)ノ┌┛ガッΣ(ノ｀Д´)ノ
  * [VM] Add original name and role to all device and VM components.
  * [VM/FM7] JOYSTICK: Fix not redirect triggers.
  * [VM/FM7][MB8877/DISK] Workaround for RIGLAS/FM-7. Perhaps, below have side-effect, add special-disk to RIGLAS FM.
  ** Don't "NOT READY" even stopping motor.
  ** Transfer even stopping motor.
  * [EVENT] Remove logging on cancel event.
  * [Qt/Debugger] Not hang-up when Opening debugger and exit emu{foo}. This is temporally workaround.
  * [Qt/Debugger] Don't close with close button, this is temporally workaround.
  * [UI/Qt] Fix selecting printers.