@@ -1,6 +1,6 @@
 ** Qt porting and FM-7/77/AV/AV40/EX for Common Source Code Project **
 
-                                                         Oct 10, 2016
+                                                         Oct 18, 2016
                             K.Ohta  (whatisthis.sowhat _at_ gmail.com)
 
 1.About
@@ -9,7 +9,7 @@ This package is Qt5 porting of Common Source Code Project (CSP)
 and built with Qt5, for Windows, built with MinGW(32bit).
 
 Source Code:
-   https://github.com/Artanejp/common_source_project-fm7/releases/tag/SNAPSHOT_20161010
+   https://github.com/Artanejp/common_source_project-fm7/releases/tag/SNAPSHOT_20161018
    
 Additional INFO:
    Binaries will be available, distibute from osdn.jp.
@@ -83,6 +83,15 @@ Upstream (Takeda Toshiya San's original code)
       http://takeda-toshiya.my.coocan.jp/
 
 Changes:
+
+* SNAPSHOT October 18, 2016
+  * Upstream 2016-04-13
+  * [VM/EVENT] Sound devices: Do mix_sound() dynamically, not do per a sample:
+  *            To reduce usage of host CPU. See event.[cpp|h] and device.h .
+  * [VM/FM7] Non-FM77AV*: Fix not clear active_page, fixed crash randomly.
+  * Built with 004920711399d430ead55e59c948e7fb7a04a402 or later.
+
+-- Oct 18, 2016 11:22:05 +0900 K.Ohta <whatisthis.sowhat@gmail.com>
 
 * SNAPSHOT October 10, 2016
   * Upstream 2016-04-13
